# localization

./: LICENSE  README.md  pyproject.toml
docs/: editor-and-validation.md  getting-started.md  locale-schema.md  migration.md  value-formatting.md
examples/: basic_usage.py
localization/: __init__.py  _paths.py  bootstrap.py  editor.py  exceptions.py  formatter.py  placeholders.py  repository.py  schemas.py  service.py  validator.py
tests/: conftest.py  test_repository.py  test_service.py  test_validator_editor_formatter.py
