[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localization"
version = "0.1.0"
description = "Small explicit JSON-file localization library"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "localization maintainers" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Internationalization",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
